--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-leap-day
-title: danthonywalker's Github Page
+title: danthonywalker's GitHub Page
+description: danthonywalker's GitHub Page
